# airplay3

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
public/: about.html
scripts/: version.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: lyrics.rs  metadata.rs  mod.rs  online.rs  persistence.rs  player.rs  window.rs
src-tauri/src/tray/: mod.rs
src/components/: AboutDialog.vue  ContextMenu.vue  EqPanel.vue  LyricsDisplay.vue  OnlineMusic.vue  PlayerControls.vue  PlaylistPanel.vue  ProgressBar.vue  SongInfo.vue  TitleBar.vue  VolumeControl.vue
src/composables/: useAudioEngine.ts  useDragDrop.ts  useEqualizer.ts  useLyrics.ts  useSkinEngine.ts  useSpectrum.ts  useTheme.ts
src/services/: lyrics.ts
src/stores/: player.ts
src/types/: player.ts  skin.ts
src/utils/: eventBus.ts
src/views/: AboutPage.vue
tests/e2e/: player.spec.ts
tests/unit/: audio-engine.test.ts  drag-drop.test.ts  lyrics.test.ts  player.test.ts  skin-engine.test.ts  spectrum.test.ts
