[package]
name = "airplay3"
version = "0.1.1"
description = "AirPlay 3 Style Music Player"
authors = ["you"]
edition = "2021"

[lib]
name = "airplay3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.5.1"
dirs = "6.0.0"
reqwest = { version = "0.13.4", features = ["json", "query", "form"] }
tokio = { version = "1.52.3", features = ["full"] }
tauri-plugin-dialog = "2.7.1"
base64 = "0.22.1"
zhconv = "0.4.1"
lofty = "0.24.0"
regex = "1.12.4"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
